# quilter-csv

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommands.fish
.github/workflows/: publish-binary-pypi.yaml  publish-release.yaml
src/qsv/: __init__.py
src/qsv/controllers/: CsvController.py  DataFrameController.py  LogController.py  QuiltController.py  YamlController.py
src/qsv/operations/chainables/: __init__.py  changetz.py  contains.py  count.py  grep.py  head.py  isin.py  renamecol.py  sed.py  select.py  sort.py  tail.py  uniq.py
src/qsv/operations/finalizers/: __init__.py  dump.py  headers.py  show.py  showquery.py  showtable.py  stats.py
src/qsv/operations/initializers/: __init__.py  load.py
src/qsv/operations/quilters/: __init__.py  quilt.py  quilt_visualize.py
src/qsv/utils/: DataFrameUtils.py  FileUtils.py
src/qsv/views/: TableView.py
src/sscsv/: __init__.py
src/sscsv/controllers/: DataFrameController.py
tests/units/: test_load.py
