[project]
name = "qsv"
version = "0.2.0"
description = "A tool designed for rapid CSV file processing and filtering, specifically designed for log analysis."
readme = "README.md"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "polars>=1.11.0",
    "rich>=13.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc>=15.0.0",
]

[project.scripts]
qsv = "qsv:main"
