[project]
name = "qsv"
version = "0.3.7"
description = "A tool that provides elastic and rapid filtering for efficient analysis of huge CSV files, such as eventlogs."
readme = "README.md"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "polars>=1.11.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc>=15.0.0",
    "pytest>=8.3.3",
]

[project.scripts]
qsv = "qsv:main"
