[project]
name = "qsv"
version = "0.3.10"
description = "A tool that provides elastic and rapid filtering for efficient analysis of huge CSV files, such as eventlogs."
readme = "README.md"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "polars>=1.17.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc>=15.0.1",
    "pytest>=8.3.4",
]

[project.scripts]
qsv = "qsv:main"
